--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -288,4 +288,7 @@
      <!-- The default value for whether head tracking for
          spatial audio is enabled for a newly connected audio device -->
     <bool name="config_spatial_audio_head_tracking_enabled_default">true</bool>
+    
+    <!-- LiveDisplay -->
+    <bool name="config_enableLiveDisplay">false</bool>
 </resources>
