sm8350-common: overlay: Add config_wallpaperMaxScale overlay
 - This should fix QS lag when pulling it down

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -291,4 +291,8 @@
     
     <!-- LiveDisplay -->
     <bool name="config_enableLiveDisplay">false</bool>
+
+    <!-- The max scale for the wallpaper when it's zoomed in -->
+    <item name="config_wallpaperMaxScale" format="float" type="dimen">1</item>
+
 </resources>
