--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -269,6 +269,8 @@
         <item>257</item> <!-- original -->
         <item>268</item> <!-- p3 -->
         <item>267</item> <!-- srgb -->
+        <item>259</item>
+        <item>260</item>
     </integer-array>
 
     <!-- Color mode to use when accessibility transforms are enabled. This color mode must be
