--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -49,6 +49,8 @@
         <item>Original</item>
         <item>P3</item>
         <item>sRGB</item>
+        <item>Xiaomi Vivid</item>
+        <item>Xiaomi Saturated</item>
     </string-array>
 
     <!-- Display settings screen, Color mode options. Must be the same length and order as
@@ -63,5 +65,7 @@
         <item>257</item>
         <item>268</item>
         <item>267</item>
+        <item>259</item>
+        <item>260</item>
     </integer-array>
 </resources>
